--- a/pom.xml
+++ b/pom.xml
@@ -173,7 +173,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ru.job4j.quartz.AlertRabbit</mainClass>
+                                    <mainClass>ru.job4j.grabber.Grabber</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
